# fastapi-redis-sample

./: README.md  pyproject.toml
src/: jobs.db  main.py
src/app/: models.py  operations.py  schemas.py
src/core/: config.py  database.py  dependencies.py  redis.py
